--- a/Jeet-links/Covid-19/Covid-19.css
+++ b/Jeet-links/Covid-19/Covid-19.css
@@ -1,54 +1,92 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-.main-container {
-    padding-left: 5%;
-    padding-right: 5%;
-    color: #505050;
-    background-color: #eeeeee;
-}
-.privacy h1 {
-    font-size: 2.5rem;
-    padding-top: 2.2rem;
-}
-.privacy p {
-    font-size: 1.8rem;
-}
-.left-notice h4 {
-    font-size: 2.0rem;
-    padding-left: 2rem;
-    color: #505050;
-}
-.header-hr{
-    border: 2px solid #505050;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-.title {
-    padding-left: 15%;
-    padding-right: 15%;
-}
-.title details {
-    font-size: 2rem;
-}
-.title p {
-    font-size: 1.6rem;
-}
-.title hr {
-    /* padding-top: 2rem; */
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    /* padding-bottom: 1rem; */
-}
-.left-notice, .privacy h4, h1 {
-    color: #000;
+body {
+  font-family: Arial, Helvetica, sans-serif
+
 }
 .for-flex {
     padding-left: 5%;
     padding-right: 5%; 
    
+  }
+  .covid-19 {
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-top: 5%;
+    background-color: #eeeeee;
+  }
+  .health-heading h1 {
+    font-size: 2.5rem;
+    padding-bottom: 20px;
+    color: #045079ef;
+    
+  }
+  .health-heading h3 {
+    font-size: 2.0rem;
+    padding-top: 20px;
+   
+  }
+  .health-heading p {
+    font-size: 1.6rem;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    color: #505050;
+  }
+  .health-heading h4 {
+    color: #505050;
+    font-size: 2rem;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .health-heading a {
+    text-decoration: none;
+    color: rgb(4, 132, 182);
+    font-weight: semi-bold;
+    font-size: 1.9rem;
+    padding-top: 20px;
+
+  }
+  .asked h3 {
+    font-size: 2.0rem;
+    padding-top: 20px;   
+  }
+  .asked  {
+    font-size: 1.9rem;
+    color: #505050;
+  }
+  .asked p {
+    font-size: 1.5rem;
+  }
+  .asked hr {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  .FAQs-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    align-items: center;
+    .visa, .travel, .around {
+        background-color: rgba(4, 143, 212, 0.955);
+        width:  100%;
+        height: 4rem;
+        text-align: center;
+        color: #fff;
+        font-size: 1.8rem;
+        font-weight: 600;
+        padding-top: 10px;
+        cursor: pointer;
+    }
+    .visa:hover, .travel:hover, .around:hover {
+      background-color: rgb(3, 187, 193);
+    }
+    
   }
   .stay-container {
     display: flex;
@@ -273,10 +311,7 @@
     font-size: 1.9rem;
     color: #fff;
   }
-  .header-center p {
-    font-size: 1.2rem;
-    color: #fff;
-  }
+ 
   nav a:hover {
     text-decoration: underline;
   }
