--- a/Jeet-links/Covid-19/Covid-19.css
+++ b/Jeet-links/Covid-19/Covid-19.css
@@ -8,6 +8,230 @@ body {
   font-family: Arial, Helvetica, sans-serif
 
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-image: url("./Yash-Assets/bg.svg");
+  overflow-x: hidden;
+}
+
+html::-webkit-scrollbar-thumb {
+  height: 8rem;
+}
+
+.up-btn {
+  box-shadow: 0 0 5px 1px #00000095;
+  background-color: #fff;
+  width: 55px;
+  height: 55px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  overflow: hidden;
+  position: fixed;
+  top: 80%;
+  right: 0;
+  bottom: 0;
+  left: 80%;
+  z-index: 1;
+}
+
+@media screen and (min-width:768px) {
+  .up-btn {
+      left: 90%;
+  }
+}
+
+.up-btn  a {
+  color: #035e88;
+  font-size: 2rem;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.up-btn:hover a {
+  color: #fff;
+}
+
+.up-btn::after {
+  content: '';
+  background-color: #035e88;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  transition: top 0.3s ease-in-out;
+}
+
+.up-btn:hover::after {
+  top: 0;
+}
+
+/* Anand's Work */
+
+.navbar{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100px;
+  align-items: center;
+  
+}
+.upperpart{
+  padding: 0 3%;
+  width: 100%;
+  display: flex;
+  border-bottom: 1px solid grey;
+  align-items: center;
+  justify-content: space-between;
+  overflow-y: hidden;
+}
+
+/* Left part of navbar */
+.leftside ul{
+  display: flex;
+  list-style: none;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+}
+
+.leftside ul li{
+  margin: 1vw;
+}
+
+.leftside ul li a:hover {
+  color: #035e88;
+}
+
+.leftside .leftlist li a{
+  text-decoration: none;
+  color: black;
+}
+.leftside a:hover{
+  color: blue;
+}
+
+/* Right part of the navbar */
+.rightside ul{
+  display: flex;
+  list-style: none;
+  font-size: 1.4rem;
+  align-items: center;
+  margin-left: auto;
+}
+.rightside ul li{
+  margin: .65vw;
+  display: flex;
+}
+.rightside ul li span a{
+  text-decoration: none;
+  color: black;
+}
+.globe , .login{
+  display: flex;
+  align-items: center;
+  margin-top: .7vh;
+  margin-left: .5vw;
+}
+.rightside button{
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.rightside img{
+  cursor: pointer;
+}
+.rightside .btn3 {
+  display: none; 
+}
+
+/* Nav-bar upperpart Css ends here......!!!!!!!! */
+
+/* lowerpart css */
+
+.lowerpart {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 4%;
+}
+
+/* left part Css of label div */
+.label_div{
+  display: flex;
+  width: 100%;
+  height: 55px;
+  justify-content: space-between;
+  align-items: center;
+  overflow-y: hidden;
+  /* border: 2px solid black; */
+}
+.label_div_leftpart ul{
+  display: flex;
+  list-style: none;
+  /* margin-left: 4.9rem; */
+  gap: 2vw;
+}
+
+
+.label_div_leftpart ul li a{
+  text-decoration: none; 
+  color: black;
+  display: flex;
+  /* align-items: center; */
+  font-size: 1.6rem;
+}
+.img1{
+  width: 65px;
+}
+.rotate {
+  transition: transform 0s; 
+}
+
+.rotate:hover {
+  transform: rotate(-180deg);
+  /* color: blue; */
+}
+
+/* right part Css of lebel div */
+
+.label_div_rightpart {
+  display: flex; 
+  align-items: center; 
+  justify-content: flex-start;
+  /* margin-right: 6.5vw; */
+}
+
+.label_div_rightpart ul {
+  display: flex;
+  list-style: none; 
+  padding: 0; 
+  margin: 0; 
+}
+
+.label_div_rightpart ul li {
+  margin: 0 1vw; 
+}
+
+.label_div_rightpart ul a {
+  display: flex; 
+  align-items: center; 
+}
+.navbar2{
+  display: none;
+}
+
 .for-flex {
     padding-left: 5%;
     padding-right: 5%; 
